searxng/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  namespace: searxng
  annotations:
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: wnsrt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "searxng.wnsrt.de"
      secretName: searxng
  
  rules:
    - host: searxng.wnsrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 3000
